<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="70dp"
    android:paddingLeft="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/nameText"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/nameCreateAccountEditText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/contour_login_edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/surnameText"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/surnameCreateAccountEditText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/contour_login_edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/emailLoginInputText"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/emailCreateAccountEditText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/contour_login_edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/passwordLoginInputText"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/passwordCreateAccountEditText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/contour_login_edit_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/repeatPasswordText"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/repeatPasswordCreateAccountEditText"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/contour_login_edit_text"/>
    </LinearLayout>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/createAccountText"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/login_button_background"/>

    <TextView
        android:id="@+id/returnToLoginTextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/returnToLoginText"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/dimenAskToRegisterAccountTextViewSizeText"
        android:onClick="onClick"
        android:clickable="true"
        />
</LinearLayout>